--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 ::-moz-selection {
   background: #b3d4fc;
   text-shadow: none; }
@@ -504,15 +505,26 @@ a:hover {
   padding: 0;
   margin: 0;
   list-style-type: none;
-  text-align: justify;
+  /* Лекарство для IE6-7*/
+  text-justify: newspaper;
+  zoom: 1;
+  /* Включаем в работу последнюю строку*/
+  text-align-last: justify;
   font-size: 0;
-  font-weight: 300; }
+  font-weight: 300;
+  width: 100%;
+  text-align: justify; }
   .main-nav:after {
-    content: '';
-    display: inline-block;
     width: 100%;
-    height: 0;
-    visibility: hidden; }
+    height: 0px;
+    visibility: hidden;
+    overflow: hidden;
+    content: '';
+    display: inline-block; }
+  .main-nav:before {
+    content: '';
+    display: block;
+    width: 100%; }
   .main-nav.main-nav-dropdown--bottom .main-nav-dropdown {
     top: auto;
     bottom: 100% !important; }
@@ -521,13 +533,15 @@ a:hover {
   .main-nav__wrap {
     background-color: #003949; }
   .main-nav__item {
+    vertical-align: top;
     font-size: 1.5rem;
     line-height: normal;
     text-align: left;
     display: inline-block;
     vertical-align: top;
     padding: 2.7rem 0;
-    position: relative; }
+    position: relative;
+    /* эмуляция inline-block для IE6-7*/ }
     .main-nav__item:hover > a {
       color: #49e5f2; }
     .main-nav__item:hover .main-nav-dropdown {
