--- a/src/pug/_config.pug
+++ b/src/pug/_config.pug
@@ -11,6 +11,7 @@
 		'libs/owl.carousel/dist/assets/owl.carousel.min.css',
 		'libs/font-awesome/css/font-awesome.css',
 		'libs/fancybox/dist/jquery.fancybox.min.css',
+		'libs/select2/dist/css/select2.min.css',
 		'css/bootstrap-grid.css',
 		'css/style.css'
 	];
@@ -19,6 +20,7 @@
 	var scriptList = [
 		'libs/jquery/dist/jquery.min.js',
 		'libs/owl.carousel/dist/owl.carousel.min.js',
+		'libs/select2/dist/js/select2.min.js',
 		'libs/fancybox/dist/jquery.fancybox.min.js',
 		'js/custom.js'
 	];
