--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -1,5 +1,5 @@
 mixin service-type(img, title, msg)
 	.service-type
 		a(href="#").service-type__image(style="background-image: url("+img+")")
-		.service-type__title.title.title--bold=title
+		.equal-height__item: h3.service-type__title.title.title--bold=title
 		.service-type__text=msg
