--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -4,7 +4,7 @@ block main
 	.mb-6
 		include includes/main-nav
 	.container.mb-6
-		.title.title--thin.mb-4 Контакты
+		h2.title.title--thin.mb-4 Контакты
 		.contacts-info
 			.contacts-info__item
 				.d-table
