--- a/src/pug/gallery.pug
+++ b/src/pug/gallery.pug
@@ -8,6 +8,6 @@ block main
 			.h.h-lg.ta-center.mb-4  Фотогалерея
 			include includes/gallary
 		aside.col-md-3
-			.h.h-md.mb-4 Рекомендуемые сайты:
+			h2.h.h-md.mb-4 Рекомендуемые сайты:
 			include includes/rec-sites
 	include includes/main-nav
