--- a/src/pug/includes/home-news.pug
+++ b/src/pug/includes/home-news.pug
@@ -1,5 +1,5 @@
 .home-news__wrap.sep-bottom
-	.title.title--bold Новости
+	h2.title.title--bold.ta-left Новости
 	ul.home-news
 		li.home-news__item
 			.d-table
