--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,9 +11,9 @@ block main
 				include includes/subscribe
 			.col-md-5
 				include includes/events
-	.container.sep-bottom.mb-4
-		.title.mb-4 Основные отрасли
-		.row
+	.container.sep-bottom.mb-6
+		h2.title.mb-4 Основные отрасли
+		.row.equal-height
 			.col-md-3.col-sm-6
 				+service-type('img/filtr-portlandcementa_01.jpg','Строительство','Состояние минерально-сырьевой базы позволяет поддерживать высокий промышленный потенциал строительной индустрии региона. ')
 			.col-md-3.col-sm-6
@@ -23,18 +23,18 @@ block main
 			.col-md-3.col-sm-6
 				+service-type('img/b_927CB181-8AD9-43DB-86DA-1C5BF6A4C690.jpg','Лесопромышленный комплекс', 'Брянская область богата лесными ресурсами: свыше 1,2 млн га ее территории занято лесами, запас древесины в которых - более 200 млн кубометров.')
 	.container.mb-6
-		.title.mb-4 ПАРТНЕРЫ
+		h2.title.mb-4 ПАРТНЕРЫ
 		.row
 			.col-sm-4.col-xs-6.ta-right.ta-center-xs
-				a(href="#"): img(src="img/maket1.jpg", alt="").img-responsive.mb-2
+				a(href="#"): img(src="img/maket1.jpg", alt="").img-responsive.mb-4
 			.col-sm-4.col-xs-6.ta-center-xs.ta-center
-				a(href="#"): img(src="img/maket4.jpg", alt="").img-responsive.mb-2
+				a(href="#"): img(src="img/maket4.jpg", alt="").img-responsive.mb-4
 			.col-sm-4.col-xs-6.ta-left
-				a(href="#"): img(src="img/maket2.jpg", alt="").img-responsive.mb-2
+				a(href="#"): img(src="img/maket2.jpg", alt="").img-responsive.mb-4
 			.col-sm-4.col-xs-6.ta-right
-				a(href="#"): img(src="img/maket5.jpg", alt="").img-responsive.mb-2
+				a(href="#"): img(src="img/maket5.jpg", alt="").img-responsive.mb-4
 			.col-sm-4.col-xs-6.col-sm-6.ta-center
-				a(href="#"): img(src="img/maket3.jpg", alt="").img-responsive.mb-2
+				a(href="#"): img(src="img/maket3.jpg", alt="").img-responsive.mb-4
 			.col-sm-4.col-xs-6.col-sm-6.ta-left
-				a(href="#"): img(src="img/maket6.jpg", alt="").img-responsive.mb-2
+				a(href="#"): img(src="img/maket6.jpg", alt="").img-responsive.mb-4
 	include includes/main-nav
