--- a/src/pug/text.pug
+++ b/src/pug/text.pug
@@ -5,16 +5,16 @@ block main
 		include includes/main-nav
 	.container
 		.col-md-9.content-section.mb-4
-			.h.h-lg.ta-center.mb-4  Реестр инвестиционных проектов
+			h2.h.h-lg.ta-center.mb-4  Реестр инвестиционных проектов
 			p Реестр инвестиционных проектов Брянской области представляет собой документ, содержащий информацию о планируемых к реализации и реализуемых на территории Брянской области инвестиционных проектах.Данные реестра используются исполнительными органами государственной власти Брянской области при планировании государственной инвестиционной политики Брянской области и разработке региональных программ, прогнозных показателей развития инвестиционной деятельности в Брянской области.
 			p
 				a(href="#")
 					i.icon.icon-save.mr-1
 					span Реестр
 			hr.mb-4
-			.h.h-lg.ta-center.mb-4  Инвестиционные предложения
+			h2.h.h-lg.ta-center.mb-4  Инвестиционные предложения
 			.spoiler.active
-				.spoiler-header Брянская область
+				h3.spoiler-header Брянская область
 				.spoiler-body
 					ul.ul.ul--save
 						li Перечень инвестиционных предложений
@@ -29,7 +29,7 @@ block main
 						li От компании Goetzpartners
 			hr
 			.spoiler
-				.spoiler-header Перечень инвестиционных предложений за пределами Брянской области
+				h3.spoiler-header Перечень инвестиционных предложений за пределами Брянской области
 				.spoiler-body
 					ul.ul
 						li
@@ -81,7 +81,7 @@ block main
 								i.icon.icon-save
 								| Скачать
 			.spoiler
-				.spoiler-header Паспорта инвестиционных проектов
+				h3.spoiler-header Паспорта инвестиционных проектов
 				.spoiler-body 
 					ul.ul.ul--marker1
 						li Завод по производству аммиака и карбамида   <a href="#"><span class="icon icon-save"></span>Скачать</a>
@@ -91,6 +91,6 @@ block main
 						li Строительство базовых станций сотовой связи в 11 н.п. Брянской области   <a href="#"><span class="icon icon-save"></span>Скачать</a>
 					hr
 		aside.col-md-3
-			.h.h-md.mb-4 Рекомендуемые сайты:
+			h2.h.h-md.mb-4 Рекомендуемые сайты:
 			include includes/rec-sites
 	include includes/main-nav
