--- a/src/pug/includes/events.pug
+++ b/src/pug/includes/events.pug
@@ -1,33 +1,28 @@
 .home-events
-	.title.title--bold Мероприятия
+	h2.title.title--bold.ta-left Мероприятия
 	.tabs
 		ul.tabs-nav
-			li.tabs-nav__item.active Прошедшие
-			li.tabs-nav__item Предстоящие
+			li.tabs-nav__item.active: h3 Прошедшие
+			li.tabs-nav__item: h3 Предстоящие
 		.tabs-content
 			.tabs-content__item.active
 				.event-tile
 					button.event-tile__close: span.icon.icon-download
-					a(href="#").event-tile__header IV Международный форум «День инноваций в архитектуре и строительстве»
-					.d-table.d-table-responsive-w100.ta-left
-						.d-table-cell.va-top
-							img(src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg", alt="").event-tile__image
-						.d-table-cell.va-top
-							.event-tile__text «День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.
+					h4: a(href="#").event-tile__header IV Международный форум «День инноваций в архитектуре и строительстве»
+					img(src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg", alt="").event-tile__image
+					.event-tile__date 23.12.1233
+					.event-tile__text «День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.
 				.event-tile
 					button.event-tile__close: span.icon.icon-download
-					a(href="#").event-tile__header IV Международный форум «День инноваций в архитектуре и строительстве»
-					.d-table.d-table-responsive-w100.ta-left
-						.d-table-cell.va-top
-							img(src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg", alt="").event-tile__image
-						.d-table-cell.va-top
-							.event-tile__text «День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.
+					h4: a(href="#").event-tile__header IV Международный форум «День инноваций в архитектуре и строительстве»
+					img(src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg", alt="").event-tile__image
+					.event-tile__date 23.12.1233
+					.event-tile__text «День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.
 			.tabs-content__item
+				
 				.event-tile
 					button.event-tile__close: span.icon.icon-download
-					a(href="#").event-tile__header IV Международный форум «День инноваций в архитектуре и строительстве»
-					.d-table.d-table-responsive-w100.ta-left
-						.d-table-cell.va-top
-							img(src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg", alt="").event-tile__image
-						.d-table-cell.va-top
-							.event-tile__text «День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.
+					h4: a(href="#").event-tile__header IV Международный форум «День инноваций в архитектуре и строительстве»
+					img(src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg", alt="").event-tile__image
+					.event-tile__date 23.12.1233
+					.event-tile__text «День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.
