--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -6,7 +6,7 @@ header.main-header
 					.d-table-cell.va-middle
 						a(href="/").d-table.header-logo
 							.d-table-cell.va-middle.d-table: img(src="img/logo.png", alt="").mr-2
-							.d-table-cell.va-middle.ta-center.hidden-xs
+							h1.d-table-cell.va-middle.ta-center.hidden-xs
 								<b>ИНВЕСТИЦИОННЫЙ ПОРТАЛ</b> <br> БРЯНСКОЙ ОБЛАСТИ
 					.d-table-cell.va-middle.header-map
 						a(href="#").d-table.ml-auto.mr-auto
@@ -16,8 +16,8 @@ header.main-header
 								span Карта <br> Инвестиционных <br> площадок
 			.col-xs-3.ta-right.main-header__right
 				ul.header-flags
-					li.header-flags__item: a(href="#").icon.icon-en
 					li.header-flags__item: a(href="#").icon.icon-ru
+					li.header-flags__item: a(href="#").icon.icon-en
 				a(href="#callbackForm").btn.btn--bd.fancybox.callback-btn.va-middle.d-inline-block
 					span.hidden-sm.hidden-xs Обратная связь
 					span.visible-sm.visible-xs: i.fa.fa-phone
