--- a/css/style.css
+++ b/css/style.css
@@ -1176,6 +1176,7 @@ img[src='img/interactMap.png'] {
 /*  popups nav
 /*-------------------------------------------------*/
 .popups-nav {
+	z-index: 10;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -1519,10 +1520,29 @@ img[src='img/interactMap.png'] {
     background-size: cover; } }
 
 @media screen and (max-width: 991px) {
+	.social{
+		margin: .6rem 0;
+	}
+	.ta-sm-left{
+		text-align: left;
+	}
+	.ta-sm-right{
+		text-align: right;
+	}
   .modal br {
     display: none; }
-  .footer-contacts {
-    max-width: 7rem; }
+    .footer-contacts__wrap{
+    	    overflow: hidden;
+    margin-top: 1rem;
+    max-width: 40rem;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    }
+  .footer-contacts { 
+    width: 50%;
+    float: left;
+    display: inline-block;
+   }
   .catalog__right {
     float: none !important; }
   .search__input {
@@ -1572,6 +1592,15 @@ img[src='img/interactMap.png'] {
     text-align: left; } }
 
 @media screen and (max-width: 767px) {
+	.ta-xs-left{
+		text-align: left;
+	}
+	.ta-xs-right{
+		text-align: right;
+	}
+	.ta-xs-center{
+		text-align: center;
+	}
   .catalog-top {
     text-align: center; }
     .catalog-top .search {
